src/components/AppHeader/Nav/style.scss
@use "src/styles/vars";

/* ANIMATION BURGER */
.navbar {
  position: fixed;
  display:flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
  width: 100%;
  min-height: 35px;
  background: linear-gradient(vars.$color-dark-green, vars.$color-darker-green);
  color: #FFF;
  z-index: 1000;
  // background: linear-gradient(#e66465, #9198e5);

  &__logo { 
    width: 40px;
    height: 40px;  
  }

  &__title { 
    font-size: 1.2rem;  
  }
  
  &__links { 
    display: flex;   
  }

  &__link {
    padding: 0 0.3rem;
    color:inherit;
    text-decoration: none;
  }

  &__burger {
    width:40px;
    height:40px;
    background: transparent;
    border: none;
    color:inherit;  
  }
}

@media screen and (max-width:767px) {
  .navbar {
    top: 0px;

    &__title {
      position: fixed;
      left: calc(50% - 40px);
    }

  }
  .navbar__links {
    flex-direction: column;
    justify-content: center;
    position: fixed;    
    right: -100vw;   
    bottom:0; 
    width: 0;
    height: 100vh;
    padding: 2rem;
    background: vars.$color-darker-green;
    visibility: hidden;
    transition: all .8s ease-out;    
  }
  
  .show-nav .navbar__links {    
    right: 0;
    /*top:75px;*/
    width: 100vw;
    visibility: visible;   
  }  
  
  /* bonus */
  .navbar__item::after {
    content: "";
    display: block;
    margin: 0 auto 0 auto;
    width: 3vw;
    height: 1px;
    background: #FFF;
  }
  .navbar__item:last-child::after {
    display: none;
  }
  
  .navbar__link {
    display: block;
    padding: 1.5rem;
    font-size: 5vw;
    text-align: center;    
  }
  
  /* toggle menu */
  .show-nav .navbar__burger {
    position: fixed;
    top:1rem;
    right:1rem;
  }
  .navbar__burger:hover {
    cursor: pointer;
  }
  .burger-bar,
  .burger-bar::before,
  .burger-bar::after {
    display: block;
    width: 40px;
    height: 3px;
    position: relative;
    border-radius: 3px;
    background: #FFF;
    transition: all .5s ease-in-out;
  }
  .burger-bar::before,
  .burger-bar::after {
    content: "";  
    position: absolute;
    left: 0;
  }
  .burger-bar::before {
    transform: translateY(-12px)
  }
  .burger-bar::after {
    transform: translateY(12px)
  }
  /* burger button animation */
  .show-nav .burger-bar {  
    width:0;
    background: transparent;
  }
  .show-nav .burger-bar::before {
    transform: rotate(45deg);
  }
  .show-nav .burger-bar::after {
    transform: rotate(-45deg);
  }

  /* Bonus - Animations */
  .navbar__item {
    transform: translateY(100vh); 
  }
  .show-nav .navbar__item {
    transform: translateY(0);    
  }
  .show-nav .slideInDown-1 {
    transition: all 1s ease-out;
  }
  .show-nav .slideInDown-2 {
    transition: all 1.1s ease-out;
  }
  .show-nav .slideInDown-3 {
    transition: all 1.2s ease-out;
  }
  .show-nav .slideInDown-4 {
    transition: all 1.3s ease-out;
  }
  .show-nav .slideInDown-5 {
    transition: all 1.4s ease-out;
  }
}

@media screen and (min-width: 768px) {
  .navbar {
    justify-content: center;
    top: 65px;

    &__logo {
      display: none;
    }

    &__item:nth-last-child(-n+2) {
      display: none;
    }

    &__title { 
      display: none;  
    }
  }
}

